frontend/src/style/editor.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Times New Roman', Times, serif;
}

hr {
  margin: 0 15px 10px 0px;
  color: #3d3d3d;
}

a {
  cursor: pointer;
  color: inherit;
}

a:hover {
  color: #bcb2ab;
}

.editor-title-input {
  margin-top: 10px;
  border: 0;
  background-color: #282828;
  color: #FFF0E3;
  font-size: larger;
  font-size: 2em;
  font-weight: bold;
  font-family: inherit;
  padding: 0;
  width: 100%;
}

.editor-title-input:focus {
  outline: none;
}

.editor-title {
  display: flex;
  min-height: 70px;
}

.editor-path {
  color: #747474;
  font-size: medium;
}

/* Container */
.editor {
  display: flex;
  flex-direction: column;
  margin: 0px 16px 0px 28px;
  background-color: #282828;
  cursor: text;
  height: 100vh;
}

.editor > div {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  overflow: auto;
  margin-bottom: 10px;
}

.ProseMirror {
  outline: none;
  font-family: inherit;
  flex-grow: 1;
  padding-bottom: 100vh;
}

.ProseMirror p.is-editor-empty:first-child::before {
  color: #959595;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

.tiptap pre {
  background-color: #1e1e1e;
  color: #FFF0E3;
  border: 1px solid #323232;
  border-radius: 6px;
  padding: 1rem;
  margin-right: 10px;
}

.tiptap pre code {
  font-family: 'Fira Code', 'Courier New', Courier, monospace;
}

.editor-error {
  display: none;
  position: absolute;
  top: 20px;
  right: 20px;
  color: red;
}

.editor-error.is-visible {
  display: flex;
}

/*Indents*/

.tiptap ol,
.tiptap ul {
  padding-left: 1.5rem;
  margin: 0.5rem 0;
}

.tiptap ol {
  list-style-type: decimal;
}

.tiptap ul {
  list-style-type: disc;
}

